--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,13 @@
-host: '/var/run/postgresql'
-adapter: 'postgresql'
-encoding: 'utf-8'
-database: 'mailbot_development'
+development:
+  host: 'localhost'
+  adapter: 'mysql2'
+  encoding: 'utf8'
+  database: 'mailbot_development'
+  username: 'root'
+  password: 'master'
+
+production:
+  host: 'localhost'
+  adapter: 'mysql2'
+  encoding: 'utf8'
+  database: 'mailbot_production'
