Add additional members to kadgar list.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,3 +15,19 @@ discord:
       - '118029540'  # job_for_a_cody
       - '69300188'   # thebossguy11
       - '141540943'  # theatakapa
+      - '123616230'  # univarseman
+      - '36838233'   # dariusknight
+      - '20921990'   # anubisvylok
+      - '90252824'   # elevatesora
+      - '49623984'   # captainredwolf
+      - '139605001'  # the_official_tgk
+      - '145025615'  # cosmic_gamers
+      - '144366639'  # soxygamer
+      - '28051039'   # ziralspiral
+      - '153261993'  # sire_wiggles
+      - '49882644'   # cacalac1
+      - '78641303'   # patthebadger
+      - '103248261'  # exogrimlocke
+      - '107110706'  # savagebeartv
+      - '70124234'   # compcrash
+      - '63760916'   # the_rev__
