--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -6,6 +6,13 @@ development:
   username: 'root'
   password: 'master'
 
+test:
+  host: 'localhost'
+  adapter: 'mysql2'
+  encoding: 'utf8'
+  database: 'mailbot_test'
+  username: 'root'
+
 production:
   host: 'localhost'
   adapter: 'mysql2'
