--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -7,6 +7,7 @@ test:
   adapter: 'postgresql'
   encoding: 'utf8'
   database: 'mailbot_test'
+  user: postgres
 
 production:
   adapter: 'postgresql'
