--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -3,11 +3,11 @@ development:
   encoding: 'utf8'
   database: 'mailbot_development'
 
-test:
-  adapter: 'postgresql'
-  encoding: 'utf8'
-  database: 'mailbot_test'
-  user: postgres
+  test:
+    adapter: 'postgresql'
+    encoding: 'utf8'
+    database: 'mailbot_test'
+    user: 'postgres'
 
 production:
   adapter: 'postgresql'
