--- a/spec/fixtures/vcr_cassettes/mailbot_rails.yml
+++ b/spec/fixtures/vcr_cassettes/mailbot_rails.yml
@@ -17,7 +17,7 @@ http_interactions:
       Server:
       - Cowboy
       Date:
-      - Wed, 02 May 2018 20:36:00 GMT
+      - Wed, 02 May 2018 20:46:10 GMT
       Connection:
       - keep-alive
       X-Frame-Options:
@@ -29,20 +29,20 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"c2fdd9790ca92dce43b6b03b1c8e63f0"
+      - W/"52f841ed6c8c4bd0a59ab6f4ca310a94"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 71bb5353-c98f-423a-a90e-a8eb6c1b1aad
+      - bf8cab67-f496-4fd6-8f13-19c96b0e06dd
       X-Runtime:
-      - '0.014143'
+      - '0.013070'
       Transfer-Encoding:
       - chunked
       Via:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '[{"news_feed_id":2,"discord_channel_id":"431217242123010053","guild_id":"224223413449916416","enabled":true},{"news_feed_id":3,"discord_channel_id":"433102426539556864","guild_id":"224223413449916416","enabled":true}]'
+      string: '[{"discord_channel_id":"431217242123010053","guild_id":"224223413449916416","enabled":true,"news_feed":{"id":2,"link":"https://www.newegg.com/Product/RSS.aspx?Submit=RSSDailyDeals\u0026Depa=0"}},{"discord_channel_id":"433102426539556864","guild_id":"224223413449916416","enabled":true,"news_feed":{"id":3,"link":"http://blog.humblebundle.com/rss"}}]'
     http_version: 
-  recorded_at: Wed, 02 May 2018 20:36:01 GMT
+  recorded_at: Wed, 02 May 2018 20:46:11 GMT
 recorded_with: VCR 3.0.3
