--- a/spec/fixtures/vcr_cassettes/mailbot_rails.yml
+++ b/spec/fixtures/vcr_cassettes/mailbot_rails.yml
@@ -42,7 +42,7 @@ http_interactions:
       - 1.1 vegur
     body:
       encoding: UTF-8
-      string: '[{"discord_channel_id":"431217242123010053","guild_id":"224223413449916416","enabled":true,"news_feed":{"id":2,"link":"https://www.newegg.com/Product/RSS.aspx?Submit=RSSDailyDeals\u0026Depa=0"}},{"discord_channel_id":"433102426539556864","guild_id":"224223413449916416","enabled":true,"news_feed":{"id":3,"link":"http://blog.humblebundle.com/rss"}}]'
+      string: '[{"discord_channel_id":"431217242123010053","guild_id":"224223413449916416","enabled":true,"news_feed":{"id":2,"link":"https://www.newegg.com/Product/RSS.aspx?Submit=RSSDailyDeals\u0026Depa=0"}},{"discord_channel_id":"433102426539556864","guild_id":"224223413449916416","enabled":false,"news_feed":{"id":3,"link":"http://blog.humblebundle.com/rss"}}]'
     http_version: 
   recorded_at: Wed, 02 May 2018 20:46:11 GMT
 recorded_with: VCR 3.0.3
