--- a/spec/fixtures/vcr_cassettes/twitch/web_api.yml
+++ b/spec/fixtures/vcr_cassettes/twitch/web_api.yml
@@ -109,4 +109,59 @@ http_interactions:
         shield maiden who gives lots of amazing hugs #beautygamers #AlwaysKeepFighting","profile_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/61a8746319b24e09-profile_image-300x300.jpeg","offline_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/captainredwolf-channel_offline_image-5ca42857464d3a28-1920x1080.png","view_count":82690}]}'
     http_version: 
   recorded_at: Thu, 17 May 2018 20:07:04 GMT
+- request:
+    method: get
+    uri: https://api.twitch.tv/helix/users?id=49623984
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Client-Id:
+      - "<TOKEN>"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json; charset=utf-8
+      Server:
+      - nginx
+      Access-Control-Allow-Origin:
+      - "*"
+      Cache-Control:
+      - no-cache, no-store, must-revalidate, private
+      Expires:
+      - '0'
+      Pragma:
+      - no-cache
+      Ratelimit-Limit:
+      - '30'
+      Ratelimit-Remaining:
+      - '29'
+      Ratelimit-Reset:
+      - '1526588670'
+      Twitch-Trace-Id:
+      - bef435e755d67198097852068bb30f21
+      X-Ctxlog-Logid:
+      - 1-5afde4c3-c8691e63ba7638853545c2f6
+      Front-End-Https:
+      - 'on'
+      Timing-Allow-Origin:
+      - https://www.twitch.tv
+      Date:
+      - Thu, 17 May 2018 20:23:31 GMT
+      Content-Length:
+      - '1544'
+      Connection:
+      - keep-alive
+    body:
+      encoding: UTF-8
+      string: '{"data":[{"id":"133652118","login":"open_mailbox","display_name":"open_mailbox","type":"","broadcaster_type":"affiliate","description":"Standing
+        in an open field west of a white house. Trying not to get eaten by a grue.","profile_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/open_mailbox-profile_image-2e3302b82f71fc11-300x300.png","offline_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/open_mailbox-channel_offline_image-d4c438af8679e6de-1920x1080.jpeg","view_count":61641},{"id":"113852750","login":"theceo_","display_name":"TheCEO_","type":"","broadcaster_type":"affiliate","description":"The
+        president and CEO of the only billion dollar company on twitch.","profile_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/7d86c6ef-e92f-45ff-a606-1a9383a1fbb7-profile_image-300x300.jpg","offline_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/28fa381b180cdc70-channel_offline_image-1920x1080.jpeg","view_count":35493},{"id":"49623984","login":"captainredwolf","display_name":"CaptainRedWolf","type":"","broadcaster_type":"affiliate","description":"#TwitchAffiliate/#Spoonie
+        (Fibromyalgia)/Native American \u0026 Norse inspired sea wolf/Caffeinated
+        shield maiden who gives lots of amazing hugs #beautygamers #AlwaysKeepFighting","profile_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/61a8746319b24e09-profile_image-300x300.jpeg","offline_image_url":"https://static-cdn.jtvnw.net/jtv_user_pictures/captainredwolf-channel_offline_image-5ca42857464d3a28-1920x1080.png","view_count":82690}]}'
+    http_version: 
+  recorded_at: Thu, 17 May 2018 20:23:31 GMT
 recorded_with: VCR 3.0.3
