--- a/spec/fixtures/vcr_cassettes/mailbot_rails.yml
+++ b/spec/fixtures/vcr_cassettes/mailbot_rails.yml
@@ -91,4 +91,49 @@ http_interactions:
         List 2","twitch_names":["one","two","three"],"discord_channel_id":"269621281991688193","guild_id":"224223413449916416","created_at":"2018-07-21T19:42:20.304Z","updated_at":"2018-07-21T19:42:20.304Z","url":"http://bot.open-mailbox.com/lurk_lists/2.json"}]'
     http_version: 
   recorded_at: Sat, 21 Jul 2018 19:44:56 GMT
+- request:
+    method: get
+    uri: http://bot.open-mailbox.com/removed_records.json?since=0
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      X-Mailbot-Api-Token:
+      - "<TOKEN>"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - Cowboy
+      Date:
+      - Mon, 23 Jul 2018 18:15:36 GMT
+      Connection:
+      - keep-alive
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      Content-Type:
+      - application/json; charset=utf-8
+      Etag:
+      - W/"4790f3ee7944fa2c66c691f692ccf67d"
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - aaae31fc-68a0-4bc6-bd0b-98793f4da075
+      X-Runtime:
+      - '0.014769'
+      Transfer-Encoding:
+      - chunked
+      Via:
+      - 1.1 vegur
+    body:
+      encoding: UTF-8
+      string: '[{"id":1,"model_type":"LurkList","model_id":1,"created_at":"2018-07-23T18:14:24.261Z","updated_at":"2018-07-23T18:14:24.261Z"}]'
+    http_version: 
+  recorded_at: Mon, 23 Jul 2018 18:15:36 GMT
 recorded_with: VCR 3.0.3
